fix: extra margin top in navbar

--- a/src/front/js/pages/feedRecipes/feedRecipes.css
+++ b/src/front/js/pages/feedRecipes/feedRecipes.css
@@ -13,7 +13,7 @@
     justify-content: space-around;
     gap:30px;
 }
-nav{
+.recipe-pagination{
     margin-top: 5%;
     bottom: 2%;
 }
